<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.teamwork.final_project.kitchen_main_light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kitchen_bulb"
        android:id="@+id/image_l"
        android:layout_marginTop="21dp"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/light_adjust"
        android:visibility="invisible"
        android:id="@+id/pros_bar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dim_save"
        android:backgroundTint="#3b5998"
        android:textColor="#FFFFFF"
        android:id="@+id/light_change"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/light_adjust"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dim_light"
        android:id="@+id/light_dim"
        android:inputType="numberDecimal"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/light_intro"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dim"
        android:id="@+id/light_adjust"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/light_dim"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_sh"
        android:textSize="18dp"
        android:id="@+id/light_intro"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/image_l"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/light_switch"
        android:layout_alignBottom="@+id/light_intro"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/l_name"
        android:layout_gravity="end"
        android:textSize="17dp"
        android:hint="name"
        android:layout_alignBottom="@+id/image_l"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
