<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kitchen_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamwork.final_project.kitchen_add_new">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/device_type"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/device_submit"
        android:max="100"
        android:progress="1"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/device_setting"
        android:id="@+id/pros_bar"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_name"
        android:hint="@string/enter_name"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/device_type"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/device_submit"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/device_setting"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_setting"
        android:hint="@string/enter_add"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/device_name"
        android:layout_alignParentStart="true" />

</RelativeLayout>
